# Lightning-agent

./: .env.example  .gitignore  .vercelignore  CLAUDE.md  README.md  pyproject.toml  render.yaml  requirements-api.txt  skills-lock.json  vercel.json
.claude/: launch.json  settings.json
api/: _seed_runtime.py  auth_utils.py  db.py  index.py  main.py  schemas.py  turso.py
app/: engine_adapter.py  shortlist_utils.py  streamlit_app.py
db/: .gitkeep
deploy/: Dockerfile.api  start.sh
design_handoff_edupath_the_path/: EduPath Full Redesign.dc.html  README.md
docs/: .gitkeep  DEPLOYMENT.md  audit_2026-07-02_notes.md  category_legend.md  deployment.md  dse_design.md  phase4_design.md  ui_rules.md  url_patterns.md
scripts/: .gitkeep  apply_data_corrections.py  backfill_descriptions.py  backtest_predictions.py  cap_round_strategy.py  check_flagged.py  check_page_starts.py  cleanup_false_positives.py  collect_college_data.py  college_card_api.py  constants.py  debug_page1_words.py  download_all_pdfs.py  download_college_images.py  download_dse_pdfs.py  download_seat_intake_pdfs.py  dse_engine.py  enter_manual_data.py  examine_ai_coordinates.py  examine_ai_dupes.py  examine_ai_pdf.py  examine_char_coordinates.py  examine_dupes_source.py  examine_dupes_source_ai.py  examine_duplicates.py  examine_mh_page_234.py  examine_more_pages.py  examine_page2_details.py  examine_pdf_first_page.py  fee_calculator.py  fix_null_cities.py  generate_dse_predictions.py  generate_predictions.py  load_campus_data.py  load_db.py  load_dse_db.py  parse_cutoffs.py  parse_dse_cutoffs.py  (+16 more)
(+81 files in other folders)
